--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <main>
     <div class="product">
-      <img src="https://via.placeholder.com/400x300" alt="Mini Soldador USB">
+      <img src="https://m.media-amazon.com/images/I/61Vbog5+DKL._AC_SL1001_.jpg" alt="Mini Soldador USB">
       <h2>Pequeño pero poderoso</h2>
       <ul class="benefits">
         <li>🔧 Precisión extrema para trabajos delicados</li>
